force-app/main/default/objects/QuoteLineItem/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>OLD Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Day</valueSetName>
    </valueSet>
</CustomField>