force-app/main/default/objects/QuoteLineItem/fields/Link_Prodotto__c.field-meta.xml
<CustomField>
    <fullName>Link_Prodotto__c</fullName>
    <formula>IF(
ISBLANK(Product2.DisplayUrl),  
&quot; &quot;,
HYPERLINK(
Product2.DisplayUrl,
&quot;Click here for video preview&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Link</label>
    <type>Text</type>
</CustomField>